--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div class="container-fluid">
         <div class="col all-12 center">
           <h1>FxGrid</h1>
-          <p>Minimalist flexbox grid system</p>
+          <p>A minimalist flexbox grid system</p>
         </div>
       </div>
     </section>
